AWS CustomerCare/deployment-services-hydra-stage.yaml
---
apiVersion: v1
kind: Service
metadata:
  # annotations:
  #   service.beta.kubernetes.io/aws-load-balancer-type: nlb
  name: customer-care-service
  namespace: hydra-stage
spec:
  ports:
    - protocol: TCP
      # nodePort: 31352
      port: 80
      targetPort: 5000
  selector:
    app: customercare
  # type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-care-deployment
  labels:
    app: customercare
  namespace: hydra-stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customercare
  template:
    metadata:
      labels:
        app: customercare
    spec:
      containers:
      - name: customer-care-hyd
        image: 555256523315.dkr.ecr.us-east-1.amazonaws.com/hydra:latest
        imagePullPolicy: Always
        # env:
        #   - name: ConnectionStrings__DefaultConnection
        #     valueFrom:
        #       secretKeyRef:
        #         name: conn-str
        #         key: conn-str-behemoth
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 5000
