AWS CustomerCare/deployment-services-js.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
  name: customer-care-service
  namespace: minotaur
spec:
  ports:
    - nodePort: 31350
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: customercare
  type: LoadBalancer


---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
  name: customer-care-service
  namespace: gryphon
spec:
  ports:
    - nodePort: 31351
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: customercare
  type: LoadBalancer


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-care-deployment
  labels:
    app: customercare
  namespace: minotaur
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customercare
  template:
    metadata:
      labels:
        app: customercare
    spec:
      containers:
      - name: customer-care-min
        image: 555256523315.dkr.ecr.us-east-1.amazonaws.com/minotaur:v1
        imagePullPolicy: Always
        # env:
        #   - name: ConnectionStrings__DefaultConnection
        #     valueFrom:
        #       secretKeyRef:
        #         name: conn-str
        #         key: conn-str-behemoth
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 3000



---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-care-deployment
  labels:
    app: customercare
  namespace: gryphon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customercare
  template:
    metadata:
      labels:
        app: customercare
    spec:
      containers:
      - name: customer-care-gry
        image: 555256523315.dkr.ecr.us-east-1.amazonaws.com/gryphon:v2
        imagePullPolicy: Always
        # env:
        #   - name: ConnectionStrings__DefaultConnection
        #     valueFrom:
        #       secretKeyRef:
        #         name: conn-str
        #         key: conn-str-behemoth
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 3000
