AWS CustomerCare/ingress-hydra.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: customercare-ingress
  namespace: hydra
spec:
  tls:
    - hosts:
      - hydra.endava-test-domain.be
      secretName: hydra-secret-tls
  rules:
  - host: api.hydra.endava-test-domain.be
    http:
      paths:
      - backend:
          serviceName: customer-care-service
          servicePort: 80
